fix(analytics): [PLTDA-1222] Fix agent name column wrapping name (#1829)
* fix(analytics): [PLTDA-1222] Truncate agent names in the table

* fix(analitics): truncate agents name

* test(analitics): update snapshot for BodyCell

---------

--- a/src/pages/stats/AgentCellContent.less
+++ b/src/pages/stats/AgentCellContent.less
@@ -4,6 +4,7 @@
     .container {
         display: inline-flex;
         align-items: center;
+        overflow: hidden;
     }
 
     .avatar {
@@ -13,5 +14,8 @@
 
     .agent {
         .body-medium();
+        text-overflow: ellipsis;
+        overflow: hidden;
+        white-space: nowrap;
     }
 }
